<resources>
    <string name="app_name">Forget Me Not</string>
    <string name="mes_plantes">Mes Plantes</string>
    <string name="ajouter_une_plante">Ajouter une plante</string>
    <string name="bienvenue_dans_forget_me_not">🌺 Bienvenue dans Forget-Me-Not ! 🌺</string>é
    <string name="logo_search">Logo Recherche</string>
    <string name="recherche">Recherche</string>
    <string name="plant_name">Plant Name</string>
    <string name="last_watering">Date Dernier  Arrosage : </string>
    <string name="next_watering">Date Prochain Arrosage : </string>
    <string name="ajouter">Ajouter</string>
    <string name="action_search">Rechercher</string>
    <string name="supprimer">Supprimer</string>
    <string name="nom_latin">Nom Latin</string>
    <string name="nom_commun">Nom Commun</string>
    <string name="frequenceEte">Frequence</string>
    <string name="plant_photo">Plant photo</string>
    <string name="frequence_d_arrosage">Frequence d\'arrosage, par mois</string>
    <string name="ete">Ete</string>
    <string name="hiver">Hiver</string>
    <string name="btn_add_photo">Bouton Ajouter Photo</string>
    <string name="saisoniere">Saisonière</string>
    <string name="edit">Modifier</string>
    <string name="watering">Arrosage</string>
</resources>