<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlantActivity">

    <EditText
        android:id="@+id/new_name_latin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/nom_latin"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_name_commun" />

    <EditText
        android:id="@+id/new_name_commun"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/nom_commun"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddPhoto" />

    <Button
        android:id="@+id/add_plant"
        android:layout_width="367dp"
        android:layout_height="49dp"
        android:layout_marginBottom="64dp"
        android:text="@string/ajouter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="casual"
        android:text="@string/frequence_d_arrosage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_name_latin" />

    <EditText
        android:id="@+id/freqEte"
        android:layout_width="246dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/frequenceEte"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/freqHiver"
        android:layout_width="246dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/frequenceEte"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freqEte" />

    <TextView
        android:id="@+id/ete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:fontFamily="casual"
        android:text="@string/ete"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toEndOf="@+id/freqEte"
        app:layout_constraintTop_toBottomOf="@+id/new_name_latin" />

    <TextView
        android:id="@+id/hiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:fontFamily="casual"
        android:text="@string/hiver"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/freqHiver"
        app:layout_constraintTop_toBottomOf="@+id/ete" />

    <ImageButton
        android:id="@+id/btnAddPhoto"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/btn_add_photo"
        android:scaleType="centerCrop"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_star" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/saisoniere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="277dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="17dp"
        android:checked="false"
        android:fontFamily="casual"
        android:minHeight="48dp"
        android:text="@string/saisoniere"
        app:layout_constraintBottom_toTopOf="@+id/add_plant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>